# nuaa-cli

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  .mutmut_config  .pre-commit-config.yaml  ACCESSIBILITY_ENHANCEMENT_PLAN.md  AGENTS.md  AGENT_READY_MVP_SUMMARY.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CODE_OF_CONDUCT.md  COMMAND_ANALYSIS.md  COMPREHENSIVE_REVIEW_REPORT.md  CONTRIBUTING.md  CULTURAL_SAFETY_FRAMEWORK.md  Dockerfile  Dockerfile.dev  EXTRACTION_DETAILS.md  FINAL_REVIEW.md  IMPROVEMENTS.md  LICENSE  Makefile  PHASE1_RESULTS.md  PHASE2_RESULTS.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_MODULE_SPLITTING_PLAN.md  POC_command_factory.py  PROJECT_ALIGNMENT_ASSESSMENT.md  PROJECT_CONTEXT_FOR_AI.md  README.md  REFACTORING_COMPLETION_SUMMARY.md  REFACTORING_PHASE4.1_SUMMARY.md  REFACTORING_PHASE4_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_RECOMMENDATIONS.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  (+12 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: AUTO_FIX_ARCHITECTURE.md
.github/workflows/: auto-fix.yml  ci.yml  docs.yml  e2e.yml  lint.yml  release.yml
agent_templates/gemini/: GEMINI.md
agent_templates/qwen/: QWEN.md
benchmarks/: README.md  performance.py
docker/: README.md
docs/: .gitignore  AGENT-READY-QUICKSTART.md  QUICK-START-NON-TECHNICAL.md  README.md  SETUP-FOR-COORDINATORS.md  USER_JOURNEYS.md  UX-IMPROVEMENTS-SUMMARY.md  docfx.json  index.md  installation.md  local-development.md  nuaa-cli-extension.md  quickstart.md
docs/accessibility/: KEYBOARD_SHORTCUTS.md
docs/archive/: README.md  quick-start.py
docs/planned-features/: email-bridge.md  teams-bot.md
docs/quick-start-guides/: EMAIL-ONLY-USERS.md  MOBILE-FIELD-WORKERS.md  README.md
interfaces/email-bridge/: README.md
interfaces/teams-bot/: README.md
interfaces/web-simple/: CHANGELOG.md  FLUENT_UI_INTEGRATION.md  INTEGRATION_GUIDE.md  README.md  README_ENHANCED.md  app.py  app_enhanced.py  requirements.txt  teams_config.py
locales/: README.md  nuaa_cli.pot
mutation_testing/: README.md
nuaa-kit/: CHANGELOG.md  QUICKSTART.md  README.md  REVIEW-FINDINGS.md  STATUS.md  evaluation-data-dictionary.md  package-lock.json
nuaa-kit/commands/: design.md  document.md  engage.md  event.md  measure.md  partner.md  propose.md  refine.md  report.md  risk.md  schema.json  train.md
nuaa-kit/docs/: evolution-guide.md  multi-agent-setup.md  update-guide.md  workflow-diagram.md
nuaa-kit/examples/: README.md  example-risk-register.md  example-stakeholder-engagement.md
nuaa-kit/microsoft365/: README.md
nuaa-kit/templates/: README.md  agent-file-template.md  budget-calculator.md  case-study-template.md  communication-plan.md  community-engagement-strategy.md  ethics-approval.md  event-plan.md  existing-program-analysis.md  impact-framework.md  logic-model.md  monitoring-plan.md  partnership-agreement.md  peer-worker-position-description.md  program-design.md  risk-register.md  stakeholder-engagement-plan.md  training-curriculum.md  volunteer-program.md  vscode-settings.json
nuaa/001-e2e-program/: CHANGELOG.md  existing-program-analysis.md  impact-framework.md  logic-model.md  program-design.md  proposal.md  report.md
scripts/: compile_translations.py  start_webui.py
scripts/bash/: common.sh  fix.sh  (+5 more)
tests/: test_accessibility.py  test_audit.py  test_banner.py  test_check_command.py  test_command_factory.py  test_commands.py  test_download.py  test_git_utils.py  test_github_client.py  test_i18n.py  test_init_command.py  test_integration_workflows.py  test_mcp_registry.py  test_missing_commands.py  test_new_commands.py  test_race_condition.py  test_scaffold_extended.py  test_scaffold_helpers.py  test_scripts.py  test_ui.py  test_utils.py  test_version.py
web_api/: README.md  main.py
(+141 files in other folders)
