[project]
name = "nuaa-cli"
version = "0.3.0"
description = "NUAA CLI - AI-Assisted Project Management for NSW Users and AIDS Association. Built on Spec-Driven Development methodology."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
    "black>=24.4",
    "pre-commit>=3.5",
    "mypy>=1.10",
]

[project.scripts]
nuaa = "nuaa_cli:main"
specify = "nuaa_cli:main"  # Legacy alias for backwards compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuaa_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
]
ignore = [
    # allow more flexible formatting in CLI module
]

[tool.ruff.lint.per-file-ignores]
"src/nuaa_cli/__init__.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = false
disallow_untyped_defs = false

