[project]
name = "nuaa-cli"
version = "0.3.0"
description = "NUAA CLI - AI-Assisted Project Management for NSW Users and AIDS Association. Built on Spec-Driven Development methodology."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0,<1.0",
    "rich>=13.0.0,<14.0",
    "httpx[socks]>=0.27.0,<1.0",
    "platformdirs>=4.0.0,<5.0",
    "readchar>=4.0.0,<5.0",
    "truststore>=0.10.4,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-mock>=3.12,<4.0",
    "ruff>=0.4.0,<1.0",
    "black>=24.4,<26.0",
    "pre-commit>=3.5,<4.0",
    "mypy>=1.10,<2.0",
    "bandit>=1.7.5,<2.0",
]

[project.scripts]
nuaa = "nuaa_cli:main"
specify = "nuaa_cli:main"  # Legacy alias for backwards compatibility

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nuaa_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
]
ignore = [
    # allow more flexible formatting in CLI module
]

[tool.ruff.lint.per-file-ignores]
"src/nuaa_cli/__init__.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
]
# Minimum coverage threshold (will be enforced in CI)
# Start at 50% and gradually increase to 70%+
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false  # TODO: Enable gradually
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
# Gradually enable stricter checks
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_incomplete_defs = true

[tool.coverage.run]
source = ["src/nuaa_cli"]
omit = [
    "tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # assert_used - we use asserts in tests

[tool.bandit.assert_used]
skips = ["tests/*"]
